# axum-chat-example-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
domain/: Cargo.toml
domain/src/: error.rs  lib.rs  models.rs  services.rs
domain/src/models/: chat_message.rs  server_id.rs
domain/src/services/: chat_room.rs
dragonfly/: Cargo.toml
dragonfly/src/: adapters.rs  conn.rs  error.rs  lib.rs  pool.rs
server/: Cargo.toml  chat.html
server/src/: endpoints.rs  main.rs
server/src/endpoints/: index.rs  websocket.rs
