[package]
name = "domain"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
repository = "https://github.com/kumanote/axum-chat-example-server"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4"] }
dragonfly = { path = "../dragonfly" }

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.9.0"
