[package]
name = "dragonfly"
version = "0.1.0"
authors = ["Hiroki Tanaka <support@kumano-te.com>"]
repository = "https://github.com/kumanote/axum-chat-example-server"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.21.6", features = ["r2d2"] }
r2d2 = "0.8.8"

[dev-dependencies]
dotenv = "0.15.0"
serial_test = "0.9.0"
